fix: fixed some issues(fixed gaps)

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container {
     outline: 1px solid red; /* чтобы контейнер был виден, в конце можно будет удалить это св-во */
     margin: 0 auto;
-    max-width: 100%;
+    max-width: 1140px;
     width: 100%;
     /* 📍 Максимальная ширина для контейнера */
 }
@@ -72,7 +72,7 @@ header span {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 25px;
+    gap: 60px;
     /* 📍 Свойствa flexbox для отступов между элементами select, .info-wrapper и .skills-wrapper  */
 }
 
@@ -117,7 +117,7 @@ select:hover,
 .books-list {
     display: flex;
     flex-direction: column;
-    gap: 5px; 
+    gap: 16px; 
     /* 📍 Свойства flexbox для отступов между элементами в списках */
 }
 
@@ -139,6 +139,7 @@ select:hover,
 .skills {
     display: flex;
     flex-direction: column;
+    gap: normal;
     /* 📍 Свойства flexbox для расположения элементов с классом .label */
 }
 
